# flyt

./: README.md  package-lock.json  package.json
src/: App.tsx  ChatUi.tsx  globals.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs  stream.rs  stream_chat.rs
