[package]
name = "flyt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "flyt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
uuid = { version =  "1.16.0", features = ["v5"]}
anyhow = "1.0.98"
chrono = "0.4.40"
reqwest = { version = "0.12.15", features = ["json"] }
